beehives work now

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.entity.item.BoatEntity field_184469_aF # status
-
 public net.minecraft.entity.item.BoatEntity field_184473_aH # lastYd
+public-f net.minecraft.village.PointOfInterestType field_221075_w # matchingStates
+public-f net.minecraft.village.PointOfInterestType field_226356_s_ # BEEHIVE
