--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ minecraft {
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', "${mod_id}", '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
                 lycheed {
@@ -76,11 +76,17 @@ repositories {
     maven {
         url "https://www.cursemaven.com"
     }
+    maven {
+        url "https://maven.jaackson.me"
+    }
 }
+
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
     implementation fg.deobf("curse.maven:farmersdelight-398521:${fd_version}")
+    implementation fg.deobf("com.minecraftabnormals:abnormals-core:${mc_version}-${abnormalsCoreVersion}")
+
 
 }
 
@@ -88,7 +94,7 @@ jar {
     manifest {
         attributes([
             "Specification-Title": "${mod_id}",
-            "Specification-Vendor": "uraneptus",
+            "Specification-Vendor": "Uraneptus",
             "Specification-Version": "1",
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
