--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:jei-238222:3157864")
     runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3128555")
     runtimeOnly fg.deobf("curse.maven:quark-243121:3221260")
+    runtimeOnly fg.deobf("curse.maven:buzzier_bees-355458:3226433")
 }
 
 jar {
