--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ org.gradle.daemon=false
 
 mod_id=lycheed
 mod_version=0.0.0
-mc_version=1.17.1
-forge_version=37.1.1
+mc_version=1.18.1
+forge_version=39.0.5
 parchment_version=2021.12.12
 
 #fd_version=3418719
-abnormalsCoreVersion=4.1.1
+blueprint=5.0.0
