--- a/build.gradle
+++ b/build.gradle
@@ -89,15 +89,15 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
-    //implementation fg.deobf("curse.maven:farmersdelight-398521:${fd_version}")
+    implementation fg.deobf("curse.maven:farmersdelight-398521:${fd_version}")
     implementation fg.deobf("com.teamabnormals:blueprint:${mc_version}-${blueprint}")
 
     runtimeOnly fg.deobf("curse.maven:jei-238222:3566128")
     runtimeOnly fg.deobf("curse.maven:configured-457570:3559398")
     runtimeOnly fg.deobf("curse.maven:catalogue-459701:3559402")
     runtimeOnly fg.deobf("curse.maven:appleskin-248787:3549846")
-    //runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3128555")
-    //runtimeOnly fg.deobf("curse.maven:quark-243121:3221260")
+    runtimeOnly fg.deobf("curse.maven:autoreglib-250363:3575622")
+    runtimeOnly fg.deobf("curse.maven:quark-243121:3578106")
     //runtimeOnly fg.deobf("curse.maven:buzzier_bees-355458:3226433")
 }
 
