--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mod_id=lycheed
-mod_version=0.0.0
+mod_version=alpha-1.1.0
 mc_version=1.18.1
 forge_version=39.0.9
 parchment_version=2021.12.19
